<resources>
    <string name="app_name">Saas-Valuation</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="arr">ARR: </string>
    <string name="revenueGrowth">Revenue Growth Rate: </string>
    <string name="tam">TAM</string>
    <string name="churn">Customer Churn: </string>
    <string name="grossMargin">Gross Margin: </string>
    <string name="cac">CAC: </string>
    <string name="ltv">LTV: </string>
    <string name="subCost">Subscription Cost</string>
    <string name="total">Total Customers</string>
    <string name="revLastYear">Revenue Last Year</string>
    <string name="revThisYear">Revenue This Year</string>
    <string name="custInfo">Customer Info for the Month of: </string>
    <string name="custLoss">Customer Loss for Month</string>
    <string name="custAtStart">Customers At Start of Month</string>
    <string name="sales">Sales</string>
    <string name="marketingCost">Marketing Cost</string>
    <string name="editButton">Edit</string>
    <string name="cancelButton">Cancel</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="empty">empty</string>
    <string name="submitButton">Submit</string>
    <string name="createButton">Create</string>
    <string name="displayButton">Display</string>
    <string name="logoutButton">Logout</string>
    <string name="password">Password</string>
    <string name="compNameTag">Company Name</string>
    <string name="year">Year</string>
    <string name="month">Month</string>


    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>
