<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Display"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/dataName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Company Name"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/labelCac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CAC" />

        <TextView
            android:id="@+id/dataCac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="datacac"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/labelLtv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="LTV" />

        <TextView
            android:id="@+id/dataLtv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="dataLTV"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/labelChurn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Churn" />

        <TextView
            android:id="@+id/dataChrun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="dataChurn"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/labelTam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TAM" />

        <TextView
            android:id="@+id/dataTam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="dataTam"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/labelGrowth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Growth" />

        <TextView
            android:id="@+id/dataGrowth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="dataGrowth"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/labelArr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ARR" />

        <TextView
            android:id="@+id/dataArr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="dataArr"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="43dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/declinedButton"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorDecline"
            android:onClick="decline"
            android:text="@string/decline"
            tools:layout_editor_absoluteX="168dp"
            tools:layout_editor_absoluteY="152dp" />

        <Button
            android:id="@+id/acceptedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccept"
            android:onClick="accept"
            android:text="@string/accept"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="140dp" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorDefault1"
            android:onClick="cancel"
            android:text="@string/cancelButton"
            tools:layout_editor_absoluteX="280dp"
            tools:layout_editor_absoluteY="314dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>